--- a/WordPokerCrossV1/Views/MainWindow.axaml
+++ b/WordPokerCrossV1/Views/MainWindow.axaml
@@ -1,7 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:WordPokerCrossV1.Views"  x:Class="WordPokerCrossV1.Views.MainWindow"
-        Title="WordPokerCrossV1">
+        Title="WordPokerCrossV1" Width="500" Height="800">
      
     <views:MainView/>   
     
